<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/Nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="30"
        android:hint="@string/nome_completo"
        android:textSize="20sp"
        android:inputType="text" />

    <EditText
        android:id="@+id/dataNasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/data_nascimento"
        android:textSize="20sp"
        android:inputType="text" />

    <EditText
        android:id="@+id/cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/cpf"
        android:inputType="text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/email"
        android:inputType="text" />

    <EditText
        android:id="@+id/celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/celular"
        android:inputType="text" />

    <EditText
        android:id="@+id/endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/endereco"
        android:inputType="text" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/senha"
        android:inputType="text"/>

    <EditText
        android:id="@+id/novaSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/nova_senha"
        android:inputType="text" />

    <Button
        android:id="@+id/containedButton"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/quadrado_botao"
        android:text="@string/cadastre_se" />


</LinearLayout>

